# galaxy

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  gate.ps1
core/: Cargo.toml
core/src/: background.rs  diagnostics.rs  integrator.rs  lib.rs  state.rs  traits.rs
core/tests/: diagnostics.rs  integrator.rs  species.rs  traits.rs
docs/plans/: cinematic-toomre-bloom.md  courant-quickening-cadence.md  dazzling-dreaming-crescent.md  deep-orbiting-sunbeam-agent-a59b4e0ec817ae0d1.md  deep-orbiting-sunbeam.md  hollow-lantern-stride.md  incandescent-nebular-veil.md  kindled-resident-cascade.md  laddered-ember-cadence.md  long-burning-beacon.md  luminous-morton-vanguard.md  natal-ember-forge.md  pinprick-starfield.md  radiant-karras-lantern.md  scattered-starlit-veil.md  settling-cinder-vigil.md  smoldering-thermal-ledger.md  stellar-nursery-glow.md  tinted-octree-lanterns.md  umbral-lantern-lattice.md
gpu/: Cargo.toml
gpu/src/: context.rs  fused_core.rs  gpu_direct_sum.rs  gpu_lbvh.rs  gpu_lbvh_fused.rs  gpu_resident.rs  gpu_tree.rs  lbvh_flatten.rs  lbvh_morton.rs  lbvh_sort.rs  lbvh_tree.rs  lib.rs  sph_cfl.rs  sph_density.rs  sph_grid.rs  sph_hydro.rs
gpu/tests/: gpu_direct_sum.rs  gpu_lbvh.rs  gpu_lbvh_fused.rs  gpu_lbvh_fused_refactor.rs  gpu_resident.rs  gpu_resident_sph.rs  gpu_tree.rs  lbvh_flatten.rs  lbvh_morton.rs  lbvh_sort.rs  lbvh_tree.rs  sph_cfl.rs  sph_density.rs  sph_hydro.rs  sph_neighbor_grid.rs
grade/: Cargo.toml
grade/src/: bloom.rs  lib.rs  local.rs
grade/tests/: bloom.rs  grade_file.rs  levels.rs  local.rs  tonemap.rs
ic/: Cargo.toml
ic/src/: collision.rs  disk.rs  disk_collision.rs  eddington.rs  encounter.rs  gas_disk.rs  halo.rs  hernquist.rs  lib.rs  nfw.rs  nfw_collision.rs  nfw_truncated.rs  orient.rs  plummer.rs
ic/tests/: collision.rs  disk_collision.rs  disk_collision_cuspy.rs  disk_collision_gas.rs  disk_in_cuspy_halo.rs  disk_in_cuspy_halo_stability.rs  disk_sampling.rs  disk_stability.rs  eddington.rs  equilibrium.rs  gas_disk_sampling.rs  gas_disk_stability.rs  hernquist_sampling.rs  hernquist_stability.rs  nfw_collision.rs  nfw_sampling.rs  nfw_stability.rs  nfw_truncated_sampling.rs  nfw_truncated_stability.rs  orientation.rs  sampling.rs  scale.rs  warm_disk.rs  warm_disk_stability.rs
io/: Cargo.toml
io/src/: lib.rs  snapshot.rs
io/tests/: roundtrip.rs
render/: Cargo.toml
render/examples/: exr_diff.rs  gpu_features.rs
render/src/: camera.rs  exr_io.rs  lib.rs  render.rs  rig.rs  volume.rs
render/tests/: camera.rs  cluster.rs  exr_io.rs  invariants.rs  rig.rs  scatter.rs  scatter_softening.rs  shadow_dda.rs  shadows.rs  splat_cap.rs  temp_color.rs  vertex_path.rs  volume.rs
renderprep/: Cargo.toml
renderprep/src/: coloring.rs  density.rs  frame.rs  gasgrid.rs  interp.rs  lib.rs  prepare.rs
renderprep/tests/: coloring.rs  density.rs  frame_roundtrip.rs  gasgrid.rs  interp.rs  prepare.rs
sim/: Cargo.toml
sim/src/: individual.rs  lib.rs  star_formation.rs
sim/tests/: adaptive_dt.rs  collision_run.rs  individual_active.rs  individual_driver.rs  individual_driver_eos.rs  individual_grav_rungs.rs  individual_hydro_cached.rs  individual_hydro_gravity.rs  individual_limiter.rs  individual_rungs.rs  individual_stepper.rs  individual_thermal_stepper.rs  sf_driver.rs  star_formation.rs
solvers/: Cargo.toml
solvers/src/: barnes_hut.rs  direct_sum.rs  lbvh.rs  lib.rs  potential.rs
solvers/src/sph/: cfl.rs  density.rs  divergence.rs  forces.rs  (+5 more)
solvers/tests/: adaptive_dt.rs  barnes_hut.rs  barnes_hut_parallel.rs  direct_sum_pairing.rs  kepler.rs  lbvh.rs  physics.rs  potential_energy_parallel.rs  sph_active_gather.rs  sph_adiabatic_compression.rs  sph_cfl.rs  sph_cfl_vector.rs  sph_density.rs  sph_forces.rs  sph_grid.rs  sph_kernel.rs  sph_sf_fields.rs  sph_shock_tube.rs  sph_sod_shock_tube.rs  tree_gravity.rs
validate/: Cargo.toml  README.md
validate/examples/: export_collision.rs  export_shock_tube.rs
validate/rebound/: cross_check.py
validate/sph/: plot_shock.py
validate/src/: lib.rs  npy.rs
validate/tests/: npy.rs
xtask/: Cargo.toml
xtask/scenarios/: bullseye.toml  cuspy.toml  disk.toml  dm.toml  dolly.toml  gasrich-adiabatic.toml  gasrich-sf.toml  gasrich.toml  inclined.toml  minor.toml  retro.toml
xtask/src/: cfl_guard.rs  lib.rs  main.rs  simulate.rs  spec.rs
xtask/tests/: adaptive_producibility.rs  cfl_guard.rs  individual_producibility.rs  scenario_build.rs  scenario_gas.rs  simulate_adaptive_wiring.rs  simulate_adiabatic_wiring.rs  simulate_gpu_adaptive.rs  simulate_gpu_sph.rs  simulate_individual_wiring.rs  simulate_sf_wiring.rs  simulate_snapshots.rs
