# Galaxy Collider — cargo workspace. See DESIGN.md for the full plan.
[workspace]
resolver = "2"
members = ["core", "solvers", "ic", "io", "sim", "validate", "render", "renderprep", "grade", "xtask"]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
glam = "0.30"
proptest = "1"
rayon = "1"
thiserror = "2"
