# Galaxy Collider — cargo workspace. See DESIGN.md for the full plan.
[workspace]
resolver = "2"
members = ["core", "solvers", "gpu", "ic", "io", "sim", "validate", "render", "renderprep", "grade", "xtask"]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
glam = "0.30"
proptest = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
