[package]
name = "galaxy-xtask"
version.workspace = true
edition.workspace = true

[dependencies]
galaxy-core = { path = "../core" }
galaxy-ic = { path = "../ic" }
galaxy-solvers = { path = "../solvers" }
galaxy-sim = { path = "../sim" }
galaxy-io = { path = "../io" }
galaxy-renderprep = { path = "../renderprep" }
galaxy-render = { path = "../render" }
galaxy-grade = { path = "../grade" }
glam = { workspace = true }
