[package]
name = "galaxy-xtask"
version.workspace = true
edition.workspace = true

[dependencies]
galaxy-core = { path = "../core" }
galaxy-ic = { path = "../ic" }
galaxy-solvers = { path = "../solvers" }
galaxy-gpu = { path = "../gpu" }
galaxy-sim = { path = "../sim" }
galaxy-io = { path = "../io" }
galaxy-renderprep = { path = "../renderprep" }
galaxy-render = { path = "../render" }
galaxy-grade = { path = "../grade" }
glam = { workspace = true }
# The scenario.toml front-end (M6f) — an xtask-only dependency by design: the
# engine crates stay serde-free.
serde = { workspace = true }
toml = { workspace = true }
